templates/kube-prometheus/templates/blackbox-exporter/deployment.yaml
---
# Source: kube-prometheus/templates/blackbox-exporter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-prometheus-blackbox-exporter
  namespace: "default"
  labels:
    app.kubernetes.io/instance: kube-prometheus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kube-prometheus
    app.kubernetes.io/version: 0.74.0
    helm.sh/chart: kube-prometheus-9.2.1
    app.kubernetes.io/component: blackbox-exporter
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus
      app.kubernetes.io/name: kube-prometheus
      app.kubernetes.io/component: blackbox-exporter
  template:
    metadata:
      annotations:
        checksum/config: 003fa2665ac4c63441d22106d4fbdced45ece1ea54351214f0c3b669b898ddf2
      labels:
        app.kubernetes.io/instance: kube-prometheus
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kube-prometheus
        app.kubernetes.io/version: 0.74.0
        helm.sh/chart: kube-prometheus-9.2.1
        app.kubernetes.io/component: blackbox-exporter
    spec:
      serviceAccountName: kube-prometheus-blackbox-exporter
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: kube-prometheus
                    app.kubernetes.io/name: kube-prometheus
                    app.kubernetes.io/component: blackbox-exporter
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: blackbox-exporter
          image: docker.io/bitnami/blackbox-exporter:0.25.0-debian-12-r5
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          args:
            - --config.file=/bitnami/blackbox-exporter/conf/config.yml
            - --web.listen-address=:19115
          ports:
            - containerPort: 19115
              name: http
          resources:
            limits:
              cpu: 150m
              ephemeral-storage: 1024Mi
              memory: 192Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            tcpSocket:
              port: http
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              port: http
          volumeMounts:
            - name: blackbox-exporter-config
              mountPath: /bitnami/blackbox-exporter/conf
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: blackbox-exporter-config
          configMap:
            name: kube-prometheus-blackbox-exporter
